--- a/SalesWebMvc/SalesWebMvc.csproj
+++ b/SalesWebMvc/SalesWebMvc.csproj
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\DepartmentsController.cs" />
+    <Compile Remove="Migrations\20211021173044_Initial.cs" />
+    <Compile Remove="Migrations\20211021173044_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20211021175151_Initial1.cs" />
+    <Compile Remove="Migrations\20211021175151_Initial1.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +33,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
   </ItemGroup>
 
 </Project>
