--- a/SalesWebMvc/SalesWebMvc.csproj
+++ b/SalesWebMvc/SalesWebMvc.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\DepartmentsController.cs" />
+    <Compile Remove="Controllers\DepartmentsController1.cs" />
     <Compile Remove="Migrations\20211021173044_Initial.cs" />
     <Compile Remove="Migrations\20211021173044_Initial.Designer.cs" />
     <Compile Remove="Migrations\20211021175151_Initial1.cs" />
